# proxy-extractor

./: .gitignore  extract.py  extractor.py  index.py  main.py  pyproject.toml
proxy_lists/: http_proxies.txt  proxies.csv  proxy_list_two.txt  socks4_proxies.txt  socks5_proxies.txt
src/proxy_extractor/: business_rule.py  config_initializer.py  exception_handler.py  extractor.py  main.py
tests/: test_proxy_extractor.py
